package packet;

message PacketHeader{
	enum PacketType{
		PKT_NONE = 0;
		PKT_CS_LOGIN = 1;
		PKT_SC_LOGIN = 2;
		PKT_SC_LOGIN_BROADCAST = 3;
	}

	required int32 mSize = 1;
	required PacketType mType = 2;
}

message LoginRequest{
	required PacketHeader mHeader = 1;
}

message LoginResult{
	required PacketHeader mHeader = 1;
	required int32 mPlyaerID = 2;
}
message LoginBroadcastResult{
	required PacketHeader mHeader = 1;
	required int32 mPlayerID = 2;
}